--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="shortcut icon" href="img/jd.ico"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<link rel="stylesheet" type="text/css" href="css/header.css"/>
+		<link rel="stylesheet" type="text/css" href="css/head.css"/>
 		<link rel="stylesheet" type="text/css" href="css/banner.css"/>
 		<link rel="stylesheet" type="text/css" href="css/spike.css"/>
 		<link rel="stylesheet" type="text/css" href="css/box1.css"/>
@@ -81,6 +82,64 @@
 		<!--header end-->
 		
 		<!--head start-->
+		<div class="head">
+			<div class="head-center">
+				<div class="logo">
+					<a class="logo-link" href="#"></a>
+				</div>
+				<div class="search">
+					<div class="search-in">
+						<div class="search-box">
+							<div class="search-text">上海旅游节</div>
+							<div class="search-camera"></div>
+							<div class="search-icon"></div>
+						</div>
+					</div>
+				</div>
+				<div class="cart">
+					<div class="cart-in">
+						<a href="#">我的购物车</a>
+						<div class="quantity">0</div>
+					</div>
+				</div>
+				<div class="searchwords">
+					<a href="#">相机低价抢</a>
+					<a href="#">499减100</a>
+					<a href="#">立减1200</a>
+					<a href="#">相机节</a>
+					<a href="#">建材钜惠</a>
+					<a href="#">戴森直降</a>
+					<a href="#">傲腾加速</a>
+					<a href="#">领券满减</a>
+					<a href="#">68送68</a>
+				</div>
+				<div class="navitems">
+					<div class="con left">
+						<a href="#">秒杀</a>
+						<a href="#">优惠券</a>
+						<a href="#">PLUS会员</a>
+						<a href="#">闪购</a>
+					</div>
+					<div class="separate"></div>
+					<div class="con mid">
+						<a href="#">拍卖</a>
+						<a href="#">京东服饰</a>
+						<a href="#">京东超市</a>
+						<a href="#">京东生鲜</a>
+					</div>
+					<div class="separate"></div>
+					<div class="con right">
+						<a href="#">全球购</a>
+						<a href="#">京东金融</a>
+					</div>
+				</div>
+				<div class="full-redu">
+					<a href="#">
+						<img src="img/full-reduce.png"/>
+					</a>
+				</div>
+			</div>
+		</div>
 		<!--head end-->
 		
 		<!--banner start-->
@@ -90,6 +149,263 @@
 				<ul class="menu">
 					<li class="menu-item">
 						<a class="menu-link" href="#">家用电器</a>
+						<div class="menu-more">
+							<ul class="more-top">
+								<li>家电馆&nbsp;></li>
+								<li>乡镇专卖店</li>
+								<li>家电服务</li>
+								<li>家电企业购</li>
+								<li>商用电器</li>
+							</ul>
+							<ul class="more-btm">
+								<li>
+									<div class="btm-title">
+										电视&nbsp;>
+									</div>
+									<div class="btm-con">
+										<div class="con1">											
+											<span class="left-sep">|</span>
+											<a href="#">曲面电视</a>
+											<span class="separate">|</span>
+											<a href="#">超薄电视</a>
+											<span class="separate">|</span>
+											<a href="#">OLED电视</a>
+											<span class="separate">|</span>
+											<a href="#">4K超清电视</a>
+											<span class="separate">|</span>
+											<a href="#">55英寸</a>
+											<span class="separate">|</span>
+											<a href="#">65英寸</a>
+											<span class="separate">|</span>
+											<a href="#">电视配件</a>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="btm-title">
+										电视&nbsp;>
+									</div>
+									<div class="btm-con">
+										<div class="con1">											
+											<span class="left-sep">|</span>
+											<a href="#">曲面电视</a>
+											<span class="separate">|</span>
+											<a href="#">超薄电视</a>
+											<span class="separate">|</span>
+											<a href="#">OLED电视</a>
+											<span class="separate">|</span>
+											<a href="#">4K超清电视</a>
+											<span class="separate">|</span>
+											<a href="#">55英寸</a>
+											<span class="separate">|</span>
+											<a href="#">65英寸</a>
+											<span class="separate">|</span>
+											<a href="#">电视配件</a>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="btm-title">
+										电视&nbsp;>
+									</div>
+									<div class="btm-con">
+										<div class="con1">											
+											<span class="left-sep">|</span>
+											<a href="#">曲面电视</a>
+											<span class="separate">|</span>
+											<a href="#">超薄电视</a>
+											<span class="separate">|</span>
+											<a href="#">OLED电视</a>
+											<span class="separate">|</span>
+											<a href="#">4K超清电视</a>
+											<span class="separate">|</span>
+											<a href="#">55英寸</a>
+											<span class="separate">|</span>
+											<a href="#">65英寸</a>
+											<span class="separate">|</span>
+											<a href="#">电视配件</a>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="btm-title">
+										电视&nbsp;>
+									</div>
+									<div class="btm-con">
+										<div class="con1">											
+											<span class="left-sep">|</span>
+											<a href="#">曲面电视</a>
+											<span class="separate">|</span>
+											<a href="#">超薄电视</a>
+											<span class="separate">|</span>
+											<a href="#">OLED电视</a>
+											<span class="separate">|</span>
+											<a href="#">4K超清电视</a>
+											<span class="separate">|</span>
+											<a href="#">55英寸</a>
+											<span class="separate">|</span>
+											<a href="#">65英寸</a>
+											<span class="separate">|</span>
+											<a href="#">电视配件</a>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="btm-title">
+										电视&nbsp;>
+									</div>
+									<div class="btm-con">
+										<div class="con1">											
+											<span class="left-sep">|</span>
+											<a href="#">曲面电视</a>
+											<span class="separate">|</span>
+											<a href="#">超薄电视</a>
+											<span class="separate">|</span>
+											<a href="#">OLED电视</a>
+											<span class="separate">|</span>
+											<a href="#">4K超清电视</a>
+											<span class="separate">|</span>
+											<a href="#">55英寸</a>
+											<span class="separate">|</span>
+											<a href="#">65英寸</a>
+											<span class="separate">|</span>
+											<a href="#">电视配件</a>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="btm-title">
+										电视&nbsp;>
+									</div>
+									<div class="btm-con">
+										<div class="con1">											
+											<span class="left-sep">|</span>
+											<a href="#">曲面电视</a>
+											<span class="separate">|</span>
+											<a href="#">超薄电视</a>
+											<span class="separate">|</span>
+											<a href="#">OLED电视</a>
+											<span class="separate">|</span>
+											<a href="#">4K超清电视</a>
+											<span class="separate">|</span>
+											<a href="#">55英寸</a>
+											<span class="separate">|</span>
+											<a href="#">65英寸</a>
+											<span class="separate">|</span>
+											<a href="#">电视配件</a>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="btm-title">
+										电视&nbsp;>
+									</div>
+									<div class="btm-con">
+										<div class="con1">											
+											<span class="left-sep">|</span>
+											<a href="#">曲面电视</a>
+											<span class="separate">|</span>
+											<a href="#">超薄电视</a>
+											<span class="separate">|</span>
+											<a href="#">OLED电视</a>
+											<span class="separate">|</span>
+											<a href="#">4K超清电视</a>
+											<span class="separate">|</span>
+											<a href="#">55英寸</a>
+											<span class="separate">|</span>
+											<a href="#">65英寸</a>
+											<span class="separate">|</span>
+											<a href="#">电视配件</a>
+										</div>
+									</div>
+								</li>
+								<li class="two-line">
+									<div class="btm-title">
+										电视&nbsp;>
+									</div>
+									<div class="btm-con">
+										<div class="con1">											
+											<span class="left-sep">|</span>
+											<a href="#">曲面电视</a>
+											<span class="separate">|</span>
+											<a href="#">超薄电视</a>
+											<span class="separate">|</span>
+											<a href="#">OLED电视</a>
+											<span class="separate">|</span>
+											<a href="#">4K超清电视</a>
+											<span class="separate">|</span>
+											<a href="#">55英寸</a>
+											<span class="separate">|</span>
+											<a href="#">65英寸</a>
+											<span class="separate">|</span>
+											<a href="#">电视配件</a>
+										</div>
+										<div class="con2">											
+											<span class="left-sep">|</span>
+											<a href="#">曲面电视</a>
+											<span class="separate">|</span>
+											<a href="#">超薄电视</a>
+											<span class="separate">|</span>
+											<a href="#">OLED电视</a>
+											<span class="separate">|</span>
+											<a href="#">4K超清电视</a>
+											<span class="separate">|</span>
+											<a href="#">55英寸</a>
+											<span class="separate">|</span>
+											<a href="#">65英寸</a>
+											<span class="separate">|</span>
+											<a href="#">电视配件</a>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="btm-title">
+										电视&nbsp;>
+									</div>
+									<div class="btm-con">
+										<div class="con1">											
+											<span class="left-sep">|</span>
+											<a href="#">曲面电视</a>
+											<span class="separate">|</span>
+											<a href="#">超薄电视</a>
+											<span class="separate">|</span>
+											<a href="#">OLED电视</a>
+											<span class="separate">|</span>
+											<a href="#">4K超清电视</a>
+											<span class="separate">|</span>
+											<a href="#">55英寸</a>
+											<span class="separate">|</span>
+											<a href="#">65英寸</a>
+											<span class="separate">|</span>
+											<a href="#">电视配件</a>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="btm-title">
+										电视&nbsp;>
+									</div>
+									<div class="btm-con">
+										<div class="con1">											
+											<span class="left-sep">|</span>
+											<a href="#">曲面电视</a>
+											<span class="separate">|</span>
+											<a href="#">超薄电视</a>
+											<span class="separate">|</span>
+											<a href="#">OLED电视</a>
+											<span class="separate">|</span>
+											<a href="#">4K超清电视</a>
+											<span class="separate">|</span>
+											<a href="#">55英寸</a>
+											<span class="separate">|</span>
+											<a href="#">65英寸</a>
+											<span class="separate">|</span>
+											<a href="#">电视配件</a>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
 					</li>
 					<li class="menu-item">
 						<a class="menu-link" href="#">手机</a>
