--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 		<link rel="stylesheet" type="text/css" href="css/joy.css"/>
 		<link rel="stylesheet" type="text/css" href="css/nowander.css"/>
 		<link rel="stylesheet" type="text/css" href="css/footer.css"/>
+		<link rel="stylesheet" type="text/css" href="css/toolbar.css"/>
 	</head>
 	<body>
+		<div id="top-anchor"></div>
 		<!--header start-->
 		<div class="header-bck">
 			<div class="header">
@@ -158,7 +160,10 @@
 					<div class="bar"></div>
 					<li class="item">
 						<div class="item-in down mjd">
-							<a href="#">我的京东</a>
+							<a href="#">
+								我的京东
+							</a>
+							<i class="iconfont">&#xe600;</i>
 							<div class="mjd-con">
 								<div class="con-top">
 									<div class="left">
@@ -215,6 +220,7 @@
 					<li class="item">
 						<div class="item-in down comp">
 							<a href="#">企业采购</a>
+							<i class="iconfont">&#xe600;</i>
 							<div class="comp-con">
 								<div class="con-top">
 									<div class="left">
@@ -266,6 +272,7 @@
 					<li class="item">
 						<div class="item-in down cust">
 							<a href="#">客户服务</a>
+							<i class="iconfont">&#xe600;</i>
 							<div class="cust-con">
 								<div class="con-top">
 									<div class="left">
@@ -316,6 +323,7 @@
 					<li class="item">
 						<div class="item-in down wnav">
 							<a href="#">网站导航</a>
+							<i class="iconfont">&#xe600;</i>
 							<div class="wnav-con">
 								<div class="con-top">
 									<div class="left">
@@ -389,7 +397,9 @@
 						<div class="search-box">
 							<div class="search-text">上海旅游节</div>
 							<div class="search-camera"></div>
-							<div class="search-icon"></div>
+							<div class="search-icon">
+								<i class="iconfont">&#xe647;</i>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -1332,98 +1342,122 @@
 						<ul class="serv-list">
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe61b;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">话费</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-1.png"/>
 									</div>
-									<div class="serv-text">话费</div>
+									<div class="serv-text">话费</div>-->
 								</a>
 							</li>
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe62e;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">机票</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-2.png"/>
 									</div>
-									<div class="serv-text">机票</div>
+									<div class="serv-text">机票</div>-->
 								</a>
 							</li>
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe614;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">酒店</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-3.png"/>
 									</div>
-									<div class="serv-text">酒店</div>
+									<div class="serv-text">酒店</div>-->
 								</a>
 							</li>
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe601;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">游戏</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-4.png"/>
 									</div>
-									<div class="serv-text">游戏</div>
+									<div class="serv-text">游戏</div>-->
 								</a>
 							</li>
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe7c0;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">企业购</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-5.png"/>
 									</div>
-									<div class="serv-text">企业购</div>
+									<div class="serv-text">企业购</div>-->
 								</a>
 							</li>
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe615;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">加油 卡</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-6.png"/>
 									</div>
-									<div class="serv-text">加油卡</div>
+									<div class="serv-text">加油卡</div>-->
 								</a>
 							</li>
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe65d;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">电影票</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-7.png"/>
 									</div>
-									<div class="serv-text">电影票</div>
+									<div class="serv-text">电影票</div>-->
 								</a>
 							</li>
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe62d;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">火车票</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-8.png"/>
 									</div>
-									<div class="serv-text">火车票</div>
+									<div class="serv-text">火车票</div>-->
 								</a>
 							</li>
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe650;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">众筹</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-9.png"/>
 									</div>
-									<div class="serv-text">众筹</div>
+									<div class="serv-text">众筹</div>-->
 								</a>
 							</li>
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe986;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">理财</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-10.png"/>
 									</div>
-									<div class="serv-text">理财</div>
+									<div class="serv-text">理财</div>-->
 								</a>
 							</li>
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe608;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">礼品卡</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-11.png"/>
 									</div>
-									<div class="serv-text">礼品卡</div>
+									<div class="serv-text">礼品卡</div>-->
 								</a>
 							</li>
 							<li class="serv-ls">
 								<a href="#" class="serv-link">
-									<div class="serv-pic">
+									<i class="iconfont">&#xe658;</i>
+									<span class="serv-text" style="display: block;height: 25px;line-height: 25px;">白条</span>
+									<!--<div class="serv-pic">
 										<img src="img/serv-12.png"/>
 									</div>
-									<div class="serv-text">白条</div>
+									<div class="serv-text">白条</div>-->
 								</a>
 							</li>
 						</ul>
@@ -2333,7 +2367,7 @@
 		<!--nowander end-->
 	
 		<!--con1 start-->
-		<div class="con1">
+		<!--<div class="con1">
 			<div class="con1-center">
 				<div class="con1-left con">
 					<div class="box-tab"></div>
@@ -2348,7 +2382,7 @@
 					<div class="box-con"></div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 		<!--con1 end-->
 		
 		<!--footer start-->
@@ -2621,6 +2655,69 @@
 			</div>
 		</div>
 		<!--footer end-->
+		
+		<!--toolbar start-->
+		<div class="toolbar">
+			<div class="toolbar-in">
+				<div class="right-bar">
+					<div class="tools">
+						<div class="jvip">
+							<div class="tool-img">
+								<i></i>
+							</div>
+							<div class="hide-item">京东会员</div>
+						</div>
+						<div class="spcast">
+							<div class="tool-img">
+								<i></i>
+							</div>
+							<div class="hide-item">购物车</div>
+						</div>
+						<div class="myfocus">
+							<div class="tool-img">
+								<i></i>
+							</div>
+							<div class="hide-item">我的关注</div>
+						</div>
+						<div class="myfpt">
+							<div class="tool-img">
+								<i></i>
+							</div>
+							<div class="hide-item">我的足迹</div>
+						</div>
+						<div class="mynews">
+							<div class="tool-img">
+								<i></i>
+							</div>
+							<div class="hide-item">我的消息</div>
+						</div>
+						<div class="consult">
+							<div class="tool-img">
+								<i></i>
+							</div>
+							<div class="hide-item">咨询JIMI</div>
+						</div>
+						<div class="fdbk">
+							<div class="tool-img">
+								<i></i>
+							</div>
+							<div class="hide-item">反馈</div>
+						</div>
+					</div>
+					<div class="back-top">
+						<div class="to-top">
+							<a href="#top-anchor">
+								<div class="top-img">
+									<i></i>
+								</div>
+								<div class="hide-item">顶部</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--toolbar start-->
 		
 	</body>
 </html>
