--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="css/mi.css"/>
 		<link rel="stylesheet" type="text/css" href="css/fashion.css"/>
 		<link rel="stylesheet" type="text/css" href="css/joy.css"/>
+		<link rel="stylesheet" type="text/css" href="css/live.css"/>
 		<link rel="stylesheet" type="text/css" href="css/nowander.css"/>
 		<link rel="stylesheet" type="text/css" href="css/footer.css"/>
 		<link rel="stylesheet" type="text/css" href="css/toolbar.css"/>
@@ -7344,6 +7345,96 @@
 			</div>
 		</div>
 		<!--JOY end-->
+		
+		<!--live start-->
+		<div class="live">
+			<div class="live-ban">
+				<div class="ban-center">
+					<div class="ban-text">
+						<div></div>
+						<h3>京东直播</h3>
+						<div></div>
+					</div>
+				</div>
+			</div>
+			<div class="live-con">
+				<div class="live-con-in">
+					<div class="left">
+						<a class="item item1" href="#">
+							<div class="item-img">
+								<img src="img/live-1.jpg"/>
+							</div>
+							<div class="play"></div>
+							<div class="text">日本荣进制药辉骊油</div>
+						</a>
+						<a class="item item1" href="#">
+							<div class="item-img">
+								<img src="img/live-2.jpg"/>
+							</div>
+							<div class="play"></div>
+							<div class="text">日本荣进制药辉骊油</div>
+						</a>
+						<a class="item item1" href="#">
+							<div class="item-img">
+								<img src="img/live-3.jpg"/>
+							</div>
+							<div class="play"></div>
+							<div class="text">日本荣进制药辉骊油</div>
+						</a>
+						<a class="item item1" href="#">
+							<div class="item-img">
+								<img src="img/live-4.jpg"/>
+							</div>
+							<div class="play"></div>
+							<div class="text">日本荣进制药辉骊油</div>
+						</a>
+					</div>
+					<div class="mid">
+						<a class="item item1" href="#">
+							<div class="item-img">
+								<img src="img/live-mid.jpg"/>
+							</div>
+							<div class="play"></div>
+							<div class="text">
+								<p class="text1">赶走黄气，做素颜女神</p>
+								<p class="text2">大额神券快快抢！！</p>
+							</div>
+						</a>
+					</div>
+					<div class="right">
+						<a class="item item1" href="#">
+							<div class="item-img">
+								<img src="img/live-5.jpg"/>
+							</div>
+							<div class="play"></div>
+							<div class="text">日本荣进制药辉骊油</div>
+						</a>
+						<a class="item item1" href="#">
+							<div class="item-img">
+								<img src="img/live-6.jpg"/>
+							</div>
+							<div class="play"></div>
+							<div class="text">日本荣进制药辉骊油</div>
+						</a>
+						<a class="item item1" href="#">
+							<div class="item-img">
+								<img src="img/live-7.jpg"/>
+							</div>
+							<div class="play"></div>
+							<div class="text">日本荣进制药辉骊油</div>
+						</a>
+						<a class="item item1" href="#">
+							<div class="item-img">
+								<img src="img/live-8.jpg"/>
+							</div>
+							<div class="play"></div>
+							<div class="text">日本荣进制药辉骊油</div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--live end-->
 		
 		<!--nowander start-->
 		<div class="nowd">
