--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<link rel="stylesheet" type="text/css" href="css/nowander.css"/>
 		<link rel="stylesheet" type="text/css" href="css/footer.css"/>
 		<link rel="stylesheet" type="text/css" href="css/toolbar.css"/>
+		<link rel="stylesheet" type="text/css" href="css/sch_fx.css"/>
 	</head>
 	<body>
 		<div id="top-anchor"></div>
@@ -6456,9 +6457,47 @@
 			
 			<!--ban-cast-->
 			<div class="ban-cast">
-				<div class="pic">
-					<img src="img/ban-cast-1.jpg"/>
-				</div>
+				<div class="slide-left"></div>
+		            <div class="slideshow">
+		                <ul class="slide-list">
+		                    <li class="slide-item active">
+		                        <img src="img/ban-cast-1.jpg" alt="">
+		                    </li>
+		                    <li class="slide-item">
+		                        <img src="img/ban-cast-2.jpg" alt="">
+		                    </li>
+		                    <li class="slide-item">
+		                        <img src="img/ban-cast-3.jpg" alt="">
+		                    </li>
+		                    <li class="slide-item">
+		                        <img src="img/ban-cast-4.jpg" alt="">
+		                    </li>
+		                    <li class="slide-item">
+		                        <!--5-->
+		                        <img src="img/ban-cast-5.jpg" alt="">
+		                    </li>
+		                    <li class="slide-item">
+		                        <img src="img/ban-cast-6.jpg" alt="">
+		                    </li>
+		                    <li class="slide-item">
+		                        <img src="img/ban-cast-7.jpg" alt="">
+		                    </li>
+		                    <li class="slide-item">
+		                        <img src="img/ban-cast-8.jpg" alt="">
+		                    </li>
+		                </ul>
+		            </div>
+	            <div class="slide-right"></div>
+	            <div class="circle-box">
+	                <div class="circle active"></div>
+	                <div class="circle"></div>
+	                <div class="circle"></div>
+	                <div class="circle"></div>
+	                <div class="circle"></div>
+	                <div class="circle"></div>
+	                <div class="circle"></div>
+	                <div class="circle"></div>
+	            </div>
 			</div>
 			
 			<!--ban-pic-->
@@ -6822,32 +6861,130 @@
 					</div>
 					<div class="box-con">
 						<a class="con">
-							<div class="con1">
-								<img src="img/album-1.jpg"/>
-							</div>
-							<div class="con2">
-								<div>
-									<img src="img/album-2.jpg"/>
+							<div class="move-box">
+								<div class="move-item">
+									<div class="con1">
+										<img src="img/album-1-3.jpg"/>
+									</div>
+									<div class="con2">
+										<div>
+											<img src="img/album-2.jpg"/>
+										</div>
+										<div>
+											<img src="img/album-3.jpg"/>
+										</div>
+										<div>
+											<img src="img/album-4.jpg"/>
+										</div>
+									</div>
+									<div class="con3">
+										<h3>护肤的“供水站”，预防肌肤干燥</h3>
+									</div>
+									<div class="con4">
+										看脸的时代护肤品是女人必不可少的，精致容颜靠护肤，护肤保养要趁早，即使是学生的你也得开始行动，给肌肤干燥高效补水，无黏腻的同时给肌肤好的保养，让肌肤水润光泽有弹性。
+									</div>
 								</div>
-								<div>
-									<img src="img/album-3.jpg"/>
+								<div class="move-item">
+									<div class="con1">
+										<img src="img/album-1-1.jpg"/>
+									</div>
+									<div class="con2">
+										<div>
+											<img src="img/album-2.jpg"/>
+										</div>
+										<div>
+											<img src="img/album-3.jpg"/>
+										</div>
+										<div>
+											<img src="img/album-4.jpg"/>
+										</div>
+									</div>
+									<div class="con3">
+										<h3>护肤的“供水站”，预防肌肤干燥</h3>
+									</div>
+									<div class="con4">
+										看脸的时代护肤品是女人必不可少的，精致容颜靠护肤，护肤保养要趁早，即使是学生的你也得开始行动，给肌肤干燥高效补水，无黏腻的同时给肌肤好的保养，让肌肤水润光泽有弹性。
+									</div>
 								</div>
-								<div>
-									<img src="img/album-4.jpg"/>
+								<div class="move-item">
+									<div class="con1">
+										<img src="img/album-1-2.png"/>
+									</div>
+									<div class="con2">
+										<div>
+											<img src="img/album-2.jpg"/>
+										</div>
+										<div>
+											<img src="img/album-3.jpg"/>
+										</div>
+										<div>
+											<img src="img/album-4.jpg"/>
+										</div>
+									</div>
+									<div class="con3">
+										<h3>护肤的“供水站”，预防肌肤干燥</h3>
+									</div>
+									<div class="con4">
+										看脸的时代护肤品是女人必不可少的，精致容颜靠护肤，护肤保养要趁早，即使是学生的你也得开始行动，给肌肤干燥高效补水，无黏腻的同时给肌肤好的保养，让肌肤水润光泽有弹性。
+									</div>
 								</div>
-							</div>
-							<div class="con3">
-								<h3>护肤的“供水站”，预防肌肤干燥</h3>
-							</div>
-							<div class="con4">
-								看脸的时代护肤品是女人必不可少的，精致容颜靠护肤，护肤保养要趁早，即使是学生的你也得开始行动，给肌肤干燥高效补水，无黏腻的同时给肌肤好的保养，让肌肤水润光泽有弹性。
-							</div>
-							<div class="circle-box">
-								<div class="circle"></div>
-								<div class="circle"></div>
-								<div class="circle"></div>
+								<div class="move-item">
+									<div class="con1">
+										<img src="img/album-1-3.jpg"/>
+									</div>
+									<div class="con2">
+										<div>
+											<img src="img/album-2.jpg"/>
+										</div>
+										<div>
+											<img src="img/album-3.jpg"/>
+										</div>
+										<div>
+											<img src="img/album-4.jpg"/>
+										</div>
+									</div>
+									<div class="con3">
+										<h3>护肤的“供水站”，预防肌肤干燥</h3>
+									</div>
+									<div class="con4">
+										看脸的时代护肤品是女人必不可少的，精致容颜靠护肤，护肤保养要趁早，即使是学生的你也得开始行动，给肌肤干燥高效补水，无黏腻的同时给肌肤好的保养，让肌肤水润光泽有弹性。
+									</div>
+								</div>
+								<div class="move-item">
+									<div class="con1">
+										<img src="img/album-1-1.jpg"/>
+									</div>
+									<div class="con2">
+										<div>
+											<img src="img/album-2.jpg"/>
+										</div>
+										<div>
+											<img src="img/album-3.jpg"/>
+										</div>
+										<div>
+											<img src="img/album-4.jpg"/>
+										</div>
+									</div>
+									<div class="con3">
+										<h3>护肤的“供水站”，预防肌肤干燥</h3>
+									</div>
+									<div class="con4">
+										看脸的时代护肤品是女人必不可少的，精致容颜靠护肤，护肤保养要趁早，即使是学生的你也得开始行动，给肌肤干燥高效补水，无黏腻的同时给肌肤好的保养，让肌肤水润光泽有弹性。
+									</div>
+								</div>
 							</div>
 						</a>
+						<div class="move-left move-btn">
+							<i class="iconfont">&#xe603;</i>
+						</div>
+						<div class="move-right move-btn">
+							<i class="iconfont">&#xe604;</i>
+						</div>
+						<div class="circle-box">
+							<div class="circle move-circle active"></div>
+							<div class="circle move-circle"></div>
+							<div class="circle move-circle"></div>
+						</div>
 					</div>
 				</div>
 				<div class="box1-right box1-con">
@@ -6952,24 +7089,94 @@
 					</div>
 					<div class="box-con">
 						<div class="con">
-							<div class="con-in">
-								<a class="item-link" href="#">
-									<div class="item-img">
-										<img src="img/mi-1.jpg"/>
+							<div class="move-box">
+								<div class="move-item">
+									<div class="con-in">
+										<a class="item-link" href="#">
+											<div class="item-img">
+												<img src="img/mi-3.png"/>
+											</div>
+											<div class="item-text1">
+												小户型就要舍弃书房吗？那是书桌没选对
+											</div>
+											<div class="item-text2">
+												由于房价的不断高涨，住不了大房子的我们只能退而求其次买合适空间的小户型来住，买的房子面积小了，可利用空间自然就不足。因此，很多人会把书房取消掉。但是我想说，这种做法是不对的。户型是小了，做不了独立的书房，但是打造一个书房小角落还是可以的，这样的书房小角落不应该被舍弃。它对成人来说这是一个工作之地，对儿童来说这是一个学习之地。
+											</div>
+										</a>
 									</div>
-									<div class="item-text1">
-										小户型就要舍弃书房吗？那是书桌没选对
+								</div>
+								<div class="move-item">
+									<div class="con-in">
+										<a class="item-link" href="#">
+											<div class="item-img">
+												<img src="img/mi-1.jpg"/>
+											</div>
+											<div class="item-text1">
+												小户型就要舍弃书房吗？那是书桌没选对
+											</div>
+											<div class="item-text2">
+												由于房价的不断高涨，住不了大房子的我们只能退而求其次买合适空间的小户型来住，买的房子面积小了，可利用空间自然就不足。因此，很多人会把书房取消掉。但是我想说，这种做法是不对的。户型是小了，做不了独立的书房，但是打造一个书房小角落还是可以的，这样的书房小角落不应该被舍弃。它对成人来说这是一个工作之地，对儿童来说这是一个学习之地。
+											</div>
+										</a>
 									</div>
-									<div class="item-text2">
-										由于房价的不断高涨，住不了大房子的我们只能退而求其次买合适空间的小户型来住，买的房子面积小了，可利用空间自然就不足。因此，很多人会把书房取消掉。但是我想说，这种做法是不对的。户型是小了，做不了独立的书房，但是打造一个书房小角落还是可以的，这样的书房小角落不应该被舍弃。它对成人来说这是一个工作之地，对儿童来说这是一个学习之地。
+								</div>
+								<div class="move-item">
+									<div class="con-in">
+										<a class="item-link" href="#">
+											<div class="item-img">
+												<img src="img/mi-2.jpg"/>
+											</div>
+											<div class="item-text1">
+												小户型就要舍弃书房吗？那是书桌没选对
+											</div>
+											<div class="item-text2">
+												由于房价的不断高涨，住不了大房子的我们只能退而求其次买合适空间的小户型来住，买的房子面积小了，可利用空间自然就不足。因此，很多人会把书房取消掉。但是我想说，这种做法是不对的。户型是小了，做不了独立的书房，但是打造一个书房小角落还是可以的，这样的书房小角落不应该被舍弃。它对成人来说这是一个工作之地，对儿童来说这是一个学习之地。
+											</div>
+										</a>
 									</div>
-								</a>
+								</div>
+								<div class="move-item">
+									<div class="con-in">
+										<a class="item-link" href="#">
+											<div class="item-img">
+												<img src="img/mi-3.png"/>
+											</div>
+											<div class="item-text1">
+												小户型就要舍弃书房吗？那是书桌没选对
+											</div>
+											<div class="item-text2">
+												由于房价的不断高涨，住不了大房子的我们只能退而求其次买合适空间的小户型来住，买的房子面积小了，可利用空间自然就不足。因此，很多人会把书房取消掉。但是我想说，这种做法是不对的。户型是小了，做不了独立的书房，但是打造一个书房小角落还是可以的，这样的书房小角落不应该被舍弃。它对成人来说这是一个工作之地，对儿童来说这是一个学习之地。
+											</div>
+										</a>
+									</div>
+								</div>
+								<div class="move-item">
+									<div class="con-in">
+										<a class="item-link" href="#">
+											<div class="item-img">
+												<img src="img/mi-1.jpg"/>
+											</div>
+											<div class="item-text1">
+												小户型就要舍弃书房吗？那是书桌没选对
+											</div>
+											<div class="item-text2">
+												由于房价的不断高涨，住不了大房子的我们只能退而求其次买合适空间的小户型来住，买的房子面积小了，可利用空间自然就不足。因此，很多人会把书房取消掉。但是我想说，这种做法是不对的。户型是小了，做不了独立的书房，但是打造一个书房小角落还是可以的，这样的书房小角落不应该被舍弃。它对成人来说这是一个工作之地，对儿童来说这是一个学习之地。
+											</div>
+										</a>
+									</div>
+								</div>
 							</div>
-							<div class="circle-box">
-								<div class="circle"></div>
-								<div class="circle"></div>
-								<div class="circle"></div>
-							</div>
+						</div>
+						<div class="move-left move-btn">
+							<i class="iconfont">&#xe603;</i>
+						</div>
+						<div class="move-right move-btn">
+							<i class="iconfont">&#xe604;</i>
+						</div>
+						<div class="circle-box">
+							<div class="circle move-circle active"></div>
+							<div class="circle move-circle"></div>
+							<div class="circle move-circle"></div>
 						</div>
 					</div>
 				</div>
@@ -7998,5 +8205,30 @@
 		</div>
 		<!--toolbar end-->
 		
+		<!--search-fixed start-->
+		<div class="sch-fx" style="position: fixed; top: -54px; left: 0; width: 100%; height: 48px; z-index: 1000; border-bottom: 2px solid #f10214;">
+			<div class="sch-fx-in">
+				<div class="search">
+					<div class="search-in">
+						<div class="sch-logo">
+							<a href="index.html">京东，多快好省</a>
+						</div>
+						<div class="search-box">
+							<div class="search-text">
+								<input class="jd-search" placeholder="上海旅游节" />
+							</div>
+							<div class="search-camera"></div>
+							<div class="search-icon">
+								<i class="iconfont">&#xe647;</i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--search-fixed end-->
+		
 	</body>
+	<script src="js/sch_fx.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/slideshow.js" type="text/javascript" charset="utf-8"></script>
 </html>
