carousel no interval

--- a/index.html
+++ b/index.html
@@ -6718,54 +6718,319 @@
 				</div>
 				<div class="spike-right">
 					<div class="carousel1">
-						<div class="caro-con">
-							<div class="item">
-								<a class="item-link">
-									<div class="pic">
-										<img src="img/spike-1.jpg"/>
-									</div>
-									<div class="text">蒙牛 低脂高钙牛奶 250ml*16 礼盒装</div>
-									<div class="price">
-										<div class="price-new">41.00</div>
-										<div class="price-old"><s>65.40</s></div>
-									</div>
-								</a>
+						<div class="circle-box">
+							<div class="move-circle active"></div>
+							<div class="move-circle"></div>
+							<div class="move-circle"></div>
+							<div class="move-circle"></div>
+						</div>
+						<div class="move-left move-btn">
+							<i class="iconfont">&#xe603;</i>
+						</div>
+						<div class="move-right move-btn">
+							<i class="iconfont">&#xe604;</i>
+						</div>
+						<div class="move-box">
+							<div class="caro-con move-item">
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-4-1.jpg"/>
+										</div>
+										<div class="text">蒙牛 低脂高钙牛奶 250ml*16 礼盒装</div>
+										<div class="price">
+											<div class="price-new">41.00</div>
+											<div class="price-old"><s>65.40</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-4-2.jpg"/>
+										</div>
+										<div class="text">好奇 Huggies 铂金装 夏季超薄透气 纸尿裤 L96+8片 大号尿不湿【9-14kg】（新老包装随机发货）</div>
+										<div class="price">
+											<div class="price-new">175.00</div>
+											<div class="price-old"><s>269.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-4-3.jpg"/>
+										</div>
+										<div class="text">日威月饼 中秋月饼  金装 蛋黄 白莲蓉 月饼 铁盒装 400g</div>
+										<div class="price">
+											<div class="price-new">17.80</div>
+											<div class="price-old"><s>59.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-4-4.jpg"/>
+										</div>
+										<div class="text">星农联合阳澄湖大闸蟹礼券螃蟹券 海鲜水产 2588型公4.5两 母3.5两 4对</div>
+										<div class="price">
+											<div class="price-new">298.00</div>
+											<div class="price-old"><s>399.00</s></div>
+										</div>
+									</a>
+								</div>
 							</div>
-							<div class="item">
-								<a class="item-link">
-									<div class="pic">
-										<img src="img/spike-2.jpg"/>
-									</div>
-									<div class="text">好奇 Huggies 铂金装 夏季超薄透气 纸尿裤 L96+8片 大号尿不湿【9-14kg】（新老包装随机发货）</div>
-									<div class="price">
-										<div class="price-new">175.00</div>
-										<div class="price-old"><s>269.00</s></div>
-									</div>
-								</a>
+							<div class="caro-con move-item">
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-1.jpg"/>
+										</div>
+										<div class="text">蒙牛 低脂高钙牛奶 250ml*16 礼盒装</div>
+										<div class="price">
+											<div class="price-new">41.00</div>
+											<div class="price-old"><s>65.40</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-2.jpg"/>
+										</div>
+										<div class="text">好奇 Huggies 铂金装 夏季超薄透气 纸尿裤 L96+8片 大号尿不湿【9-14kg】（新老包装随机发货）</div>
+										<div class="price">
+											<div class="price-new">175.00</div>
+											<div class="price-old"><s>269.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-3.jpg"/>
+										</div>
+										<div class="text">日威月饼 中秋月饼  金装 蛋黄 白莲蓉 月饼 铁盒装 400g</div>
+										<div class="price">
+											<div class="price-new">17.80</div>
+											<div class="price-old"><s>59.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-4.jpg"/>
+										</div>
+										<div class="text">星农联合阳澄湖大闸蟹礼券螃蟹券 海鲜水产 2588型公4.5两 母3.5两 4对</div>
+										<div class="price">
+											<div class="price-new">298.00</div>
+											<div class="price-old"><s>399.00</s></div>
+										</div>
+									</a>
+								</div>
 							</div>
-							<div class="item">
-								<a class="item-link">
-									<div class="pic">
-										<img src="img/spike-3.jpg"/>
-									</div>
-									<div class="text">日威月饼 中秋月饼  金装 蛋黄 白莲蓉 月饼 铁盒装 400g</div>
-									<div class="price">
-										<div class="price-new">17.80</div>
-										<div class="price-old"><s>59.00</s></div>
-									</div>
-								</a>
+							<div class="caro-con move-item">
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-2-1.jpg"/>
+										</div>
+										<div class="text">蒙牛 低脂高钙牛奶 250ml*16 礼盒装</div>
+										<div class="price">
+											<div class="price-new">41.00</div>
+											<div class="price-old"><s>65.40</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-2-2.jpg"/>
+										</div>
+										<div class="text">好奇 Huggies 铂金装 夏季超薄透气 纸尿裤 L96+8片 大号尿不湿【9-14kg】（新老包装随机发货）</div>
+										<div class="price">
+											<div class="price-new">175.00</div>
+											<div class="price-old"><s>269.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-2-3.jpg"/>
+										</div>
+										<div class="text">日威月饼 中秋月饼  金装 蛋黄 白莲蓉 月饼 铁盒装 400g</div>
+										<div class="price">
+											<div class="price-new">17.80</div>
+											<div class="price-old"><s>59.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-2-4.jpg"/>
+										</div>
+										<div class="text">星农联合阳澄湖大闸蟹礼券螃蟹券 海鲜水产 2588型公4.5两 母3.5两 4对</div>
+										<div class="price">
+											<div class="price-new">298.00</div>
+											<div class="price-old"><s>399.00</s></div>
+										</div>
+									</a>
+								</div>
 							</div>
-							<div class="item">
-								<a class="item-link">
-									<div class="pic">
-										<img src="img/spike-4.jpg"/>
-									</div>
-									<div class="text">星农联合阳澄湖大闸蟹礼券螃蟹券 海鲜水产 2588型公4.5两 母3.5两 4对</div>
-									<div class="price">
-										<div class="price-new">298.00</div>
-										<div class="price-old"><s>399.00</s></div>
-									</div>
-								</a>
+							<div class="caro-con move-item">
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-3-1.jpg"/>
+										</div>
+										<div class="text">蒙牛 低脂高钙牛奶 250ml*16 礼盒装</div>
+										<div class="price">
+											<div class="price-new">41.00</div>
+											<div class="price-old"><s>65.40</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-3-2.jpg"/>
+										</div>
+										<div class="text">好奇 Huggies 铂金装 夏季超薄透气 纸尿裤 L96+8片 大号尿不湿【9-14kg】（新老包装随机发货）</div>
+										<div class="price">
+											<div class="price-new">175.00</div>
+											<div class="price-old"><s>269.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-3-3.jpg"/>
+										</div>
+										<div class="text">日威月饼 中秋月饼  金装 蛋黄 白莲蓉 月饼 铁盒装 400g</div>
+										<div class="price">
+											<div class="price-new">17.80</div>
+											<div class="price-old"><s>59.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-4-4.jpg"/>
+										</div>
+										<div class="text">星农联合阳澄湖大闸蟹礼券螃蟹券 海鲜水产 2588型公4.5两 母3.5两 4对</div>
+										<div class="price">
+											<div class="price-new">298.00</div>
+											<div class="price-old"><s>399.00</s></div>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="caro-con move-item">
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-4-1.jpg"/>
+										</div>
+										<div class="text">蒙牛 低脂高钙牛奶 250ml*16 礼盒装</div>
+										<div class="price">
+											<div class="price-new">41.00</div>
+											<div class="price-old"><s>65.40</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-4-2.jpg"/>
+										</div>
+										<div class="text">好奇 Huggies 铂金装 夏季超薄透气 纸尿裤 L96+8片 大号尿不湿【9-14kg】（新老包装随机发货）</div>
+										<div class="price">
+											<div class="price-new">175.00</div>
+											<div class="price-old"><s>269.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-4-3.jpg"/>
+										</div>
+										<div class="text">日威月饼 中秋月饼  金装 蛋黄 白莲蓉 月饼 铁盒装 400g</div>
+										<div class="price">
+											<div class="price-new">17.80</div>
+											<div class="price-old"><s>59.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-4-4.jpg"/>
+										</div>
+										<div class="text">星农联合阳澄湖大闸蟹礼券螃蟹券 海鲜水产 2588型公4.5两 母3.5两 4对</div>
+										<div class="price">
+											<div class="price-new">298.00</div>
+											<div class="price-old"><s>399.00</s></div>
+										</div>
+									</a>
+								</div>
+							</div>
+							
+							<div class="caro-con move-item">
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-1.jpg"/>
+										</div>
+										<div class="text">蒙牛 低脂高钙牛奶 250ml*16 礼盒装</div>
+										<div class="price">
+											<div class="price-new">41.00</div>
+											<div class="price-old"><s>65.40</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-2.jpg"/>
+										</div>
+										<div class="text">好奇 Huggies 铂金装 夏季超薄透气 纸尿裤 L96+8片 大号尿不湿【9-14kg】（新老包装随机发货）</div>
+										<div class="price">
+											<div class="price-new">175.00</div>
+											<div class="price-old"><s>269.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-3.jpg"/>
+										</div>
+										<div class="text">日威月饼 中秋月饼  金装 蛋黄 白莲蓉 月饼 铁盒装 400g</div>
+										<div class="price">
+											<div class="price-new">17.80</div>
+											<div class="price-old"><s>59.00</s></div>
+										</div>
+									</a>
+								</div>
+								<div class="item">
+									<a class="item-link">
+										<div class="pic">
+											<img src="img/spike-4.jpg"/>
+										</div>
+										<div class="text">星农联合阳澄湖大闸蟹礼券螃蟹券 海鲜水产 2588型公4.5两 母3.5两 4对</div>
+										<div class="price">
+											<div class="price-new">298.00</div>
+											<div class="price-old"><s>399.00</s></div>
+										</div>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
