--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 		<link rel="stylesheet" type="text/css" href="css/sch_fx.css"/>
 	</head>
 	<body>
-		<div id="top-anchor"></div>
 		<!--header start-->
 		<div class="header-bck">
 			<div class="header">
@@ -9313,7 +9312,7 @@
 					</div>
 					<div class="back-top">
 						<div class="to-top">
-							<a href="#top-anchor">
+							<a href="#">
 								<div class="top-img">
 									<i></i>
 								</div>
@@ -9352,4 +9351,5 @@
 	</body>
 	<script src="js/sch_fx.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/slideshow.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/countdown.js" type="text/javascript" charset="utf-8"></script>
 </html>
